# synth

./: .all-contributorsrc  .eslintrc.json  .gitignore  .npmignore  01a85c17.057161ab.js  01a85c17.1b9a44fc.js  01a85c17.211d9ab3.js  01a85c17.21a207d0.js  01a85c17.2f73b1bf.js  01a85c17.35a46534.js  01a85c17.3d13e048.js  01a85c17.470ba6f1.js  01a85c17.4fb7955a.js  01a85c17.5556618a.js  01a85c17.58da82fe.js  01a85c17.5a348139.js  01a85c17.7fb6eb55.js  01a85c17.aabe0766.js  01a85c17.d0c8050a.js  01a85c17.d9fef895.js  01a85c17.ebf30f6c.js  024c0a02.030612d0.js  024c0a02.13c233da.js  024c0a02.19f31166.js  024c0a02.360d097d.js  024c0a02.39a71f84.js  024c0a02.3aef52f0.js  024c0a02.48ab78fc.js  024c0a02.565761f6.js  024c0a02.69ac1b06.js  024c0a02.6ade136a.js  024c0a02.7c2848bf.js  024c0a02.8c762b30.js  024c0a02.95e112b0.js  024c0a02.9c715ef9.js  024c0a02.b9e40b5e.js  091606b8.0f46591a.js  091606b8.377b0314.js  091606b8.7d294a8d.js  091606b8.ac6e666c.js  (+1290 more)
bindlang/: Cargo.toml
bindlang/examples/: ex.rs
bindlang/src/: lib.rs
blog/: atom.xml  index.html  rss.xml
core/: Cargo.toml
core/src/: error.rs  lib.rs
core/src/compile/: address.rs  link.rs  mod.rs  state.rs  utils.rs
core/src/graph/: array.rs  boolean.rs  csv.rs  date_time.rs  iter.rs  json.rs  mod.rs  null.rs  number.rs  object.rs  one_of.rs  prelude.rs  series.rs  unique.rs  uuid.rs
core/src/graph/string/: constant.rs  date_time.rs  faker.rs  format.rs  mod.rs  serialized.rs  sliced.rs  truncated.rs  uuid.rs
core/src/schema/: augmentation.rs  mod.rs  namespace.rs  optionalise.rs  s_override.rs  scenario.rs
core/src/schema/content/: array.rs  bool.rs  categorical.rs  datasource.rs  date_time.rs  hidden.rs  mod.rs  number.rs  object.rs  one_of.rs  prelude.rs  series.rs  string.rs  test.json  unique.rs  uuid.rs
core/src/schema/inference/: mod.rs  value.rs
node/: Cargo.toml  README.md  index.js  index.ts  package-lock.json  package.json  tsconfig.json
node/content/: array.ts  bool.ts  content.ts  date_time.ts  index.ts  number.ts  object.ts  one_of.ts  same_as.ts  string.ts
node/src/: lib.rs
node/ts/: array.ts  content.ts  index.ts  number.ts  object.ts  one_of.ts  same_as.ts  string.ts
node/types/: package-lock.json  package.json  tsconfig.json
node/types/src/: bool.ts  content.ts  index.ts  object.ts  one_of.ts  string.ts
semdet/: Cargo.toml  build.rs
semdet/src/: decode.rs  encode.rs  error.rs  lib.rs  module.rs
semdet/train/: dummy.tch
synth/: Cargo.toml  build.rs  pyproject.toml
synth-daemon/: Cargo.toml
synth-daemon/src/: api.rs  daemon.rs  error.rs  main.rs
synth-daemon/src/rlog/: composite.rs  mod.rs  target.rs  zenduty.rs
synth/.cargo/: config  config.toml
synth/benches/: bench.rs
synth/migrations/20200928172352_init/: down.sql  up.sql
synth/src/: api.rs  daemon.rs  error.rs  index.rs  lib.rs  main.rs  python.rs  sampler.rs  store.rs  utils.rs  version.rs
synth/src/cli/: config.rs  db_utils.rs  export.rs  import.rs  import_utils.rs  json.rs  jsonl.rs  jsonlines.rs  mod.rs  mongo.rs  mysql.rs  postgres.rs  sqlite.rs  stdf.rs  store.rs  synth_doc.rs  telemetry.rs
synth/src/cli/csv/: headers.rs  mod.rs
synth/src/datasource/: mod.rs  mysql_datasource.rs  postgres_datasource.rs  relational_datasource.rs  sqlite_datasource.rs
synth/src/rlog/: mod.rs
synth/src/schema/: mod.rs  namespace.rs  optionalise.rs
synth/src/schema/content/: array.rs  filter.rs  mod.rs  one_of.rs  prelude.rs
synth/testing_harness/: tpch.sql
synth/testing_harness/errors/: README.md  e2e.sh
synth/testing_harness/errors/generate/186-negative-array/: errors.txt  schema.json
synth/testing_harness/errors/generate/190-faker-mistyped/: errors.txt  schema.json
synth/testing_harness/errors/generate/191-format-structure-wrong/: errors.txt  schema.json
synth/testing_harness/errors/generate/192-string-missing-subtype/: errors.txt  schema.json
synth/testing_harness/errors/generate/193-array-length-missing-high/: errors.txt  schema.json
synth/testing_harness/errors/generate/195-empty-array-length/: errors.txt  schema.json
synth/testing_harness/errors/generate/array-empty-content/: errors.txt  schema.json
synth/testing_harness/errors/generate/missing-type/: errors.txt  schema.json
synth/testing_harness/hospital/: 0_hospital_schema.sql  e2e.sh  hospital_data_generated_master.json
synth/testing_harness/mongodb/: .env  README.md  e2e.sh
synth/testing_harness/mongodb/hospital_data/: hospitals.json
synth/testing_harness/mongodb/hospital_master/: doctors.json  hospitals.json  patients.json
synth/testing_harness/mongodb/hospital_master_data/: doctors.json  patients.json
synth/testing_harness/mongodb/synth/hospital/: doctors.json  hospitals.json  patients.json
synth/testing_harness/mysql/: .env  .gitignore  1_hospital_data.sql  README.md  e2e.sh
synth/testing_harness/mysql/hospital_master/: doctors.json  hospitals.json  patients.json
synth/testing_harness/mysql/warnings/f32/: f32.json  schema.sql  warnings.txt
synth/testing_harness/mysql/warnings/f64/: f64.json  schema.sql  warnings.txt
synth/testing_harness/postgres/: .env  .gitignore  0_all_schema.sql  0_complete_schema.sql  0_hospital_schema.sql  1_hospital_data.sql  Dockerfile  README.md  e2e.sh  hospital_data_generated.json  hospital_data_generated_master.json  run_harness.sh
synth/testing_harness/postgres/all_master/: synth.json
synth/testing_harness/postgres/arrays/: 0_arrays.sql  arrays.json  unofficial_arrays.json
synth/testing_harness/postgres/arrays_master/: arrays.json  unofficial_arrays.json
synth/testing_harness/postgres/complete_import_master/: synth.json  types.json  unofficial_types.json
synth/testing_harness/postgres/complete_master/: types.json  unofficial_types.json
synth/testing_harness/postgres/hospital_master/: Hospitals.json  doctors.json  hospitals.json  patients.json
synth/testing_harness/postgres/warnings/: 0_warnings.sql  warnings.json  warnings.sh
synth/tests/: docs.rs  examples.rs
synth/tests/examples/bank/: output.json
synth/tests/helpers/: mod.rs
synth/wix/: License.rtf  main.wxs
(+410 files in other folders)
