[package]
name = "bindlang"
version = "0.1.0"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["extra-traits", "full", "fold", "parsing", "proc-macro"] }
quote = "1.0"
koto = { git = "https://github.com/llogiq/koto", branch = "vtable" }
koto_runtime = { git = "https://github.com/llogiq/koto", branch = "vtable" }
lang_bindings = { path = "../lang_bindings" }
lazy_static = "1.4.0"
