[package]
name = "synth-core"
version = "0.5.1"
authors = [
  "Damien Broka <damien@getsynth.com>",
  "Christos Hadjiaslanis <christos@getsynth.com>",
  "Andre Bogus <andre@getsynth.com>"
]
edition = "2018"
license = "Apache-2.0"

[features]
api = [ "tide" ]

[dev-dependencies]
tempfile = "3.1.0"
env_logger = "0.7.1"

[dependencies]
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
lazy_static = "1.4.0"
colored = "2.0.0"
anyhow = "1.0.32"
log = "0.4.11"
tide = { version = "0.16.0", optional = true }
num_cpus = "1.0"
strsim = "0.10.0"
regex = "1.3.9"
fake = { git = "https://github.com/cksac/fake-rs", features = ["http"], rev = "ab095c1f8cf230cfa94305339b4e08bd02a275d4" }
rand = "0.8.3"
chrono = { version = "0.4.18", features = ["serde"] }
bincode = "1.3.1"
num = "0.3.1"
rand_regex = "0.15.1"
synth-gen = { path = "../gen", features = [ "shared" ] }
uuid = { version = "0.8.2", features = ["v4"] }
bimap = { version = "0.6.0", features = [ "std" ] }
humantime-serde = "1.0.1"
bloomfilter = "1.0.5"
