[package]
name = "synth-core"
version = "0.6.3"
authors = [
  "Damien Broka <damien@getsynth.com>",
  "Christos Hadjiaslanis <christos@getsynth.com>",
  "Andre Bogus <andre@getsynth.com>"
]
edition = "2021"
license = "Apache-2.0"

[dev-dependencies]
tempfile = "3.1.0"
env_logger = "0.7.1"

[dependencies]
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
lazy_static = "1.4.0"
anyhow = "1.0.32"
log = "0.4.11"
num_cpus = "1.0"
strsim = "0.10.0"
regex = "1.3.9"
fake = { version = "=2.4.1", features = ["http"] }
rand = "0.8.3"
chrono = { version = "0.4.18", features = ["serde"] }
bincode = "1.3.1"
num = { version = "0.4.0", features = [ "rand" ] }
rand_regex = "0.15.1"
synth-gen = { path = "../gen", features = [ "shared" ] }
uuid = { version = "0.8.2", features = ["v4", "serde"] }
bimap = { version = "0.6.0", features = [ "std" ] }
humantime-serde = "1.0.1"
bloomfilter = "1.0.5"
dynfmt = { version = "0.1.5", features = [ "curly" ] }
sqlx = { version = "0.6", features = ["postgres", "mysql", "runtime-async-std-rustls", "decimal", "chrono", "uuid"] }
uriparse = "0.6.3"
paste = "1.0"
