[package]
name = "semantic-detection"
version = "0.1.0"
edition = "2018"
authors = [
    "Damien Broka <damien@getsynth.com>",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "semantic_detection"
crate-type=["lib", "dylib"]

[features]
default = [ "dummy" ]
train = [ "pyo3" ]
dummy = [ ]
torch = [ "tch" ]

[dependencies.arrow]
version = "5.1.0"

[dependencies.fake]
version = "2.4.1"
features = ["http"]

[dependencies.pyo3]
version = "0.14.2"
optional = true
features = [ "extension-module" ]

[dependencies.tch]
version = "0.5.0"
optional = true

[dependencies.ndarray]
version = "0.15.3"

[dev-dependencies.rand]
version = "0.8.4"