[package]
name = "synth-daemon"
version = "0.2.1"
authors = [
  "Damien Broka <damien@getsynth.com>",
  "Christos Hadjiaslanis <christos@getsynth.com>"
]
edition = "2018"

[features]
default = [ "python" ]
python = [ "pyo3" ]

[build-dependencies]
git2 = "0.13.11"
quote = "1.0"

[dev-dependencies]
lazy_static = "1.4.0"
tempfile = "3.1.0"

[dependencies]
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"

colored = "2.0.0"
anyhow = "1.0.32"

structopt = "0.3.18"

log = "0.4.11"
env_logger = "0.7.1"

num_cpus = "1.0"
sysinfo = "0.15.2"
strsim = "0.10.0"

async-std = { version = "1.6.4", features = [ "attributes", "unstable" ] }
tide = "0.13.0"

reqwest = { version = "0.10", features = ["blocking", "json"] } # only used by `rlog`

chrono = "0.4.18"

regex = "1.3.9"

rand = "0.7.3"

ctrlc = { version = "3.0", features = ["termination"] }

synth = { path = "../synth", features = [ "python" ] }
synth-generator = { path = "../synth-generator" }

pyo3 = { version = "0.12.1", optional = true }