[package]
name = "synth"
version = "0.6.0"
authors = [
  "Damien Broka <damien@getsynth.com>",
  "Christos Hadjiaslanis <christos@getsynth.com>",
  "Andre Bogus <andre@getsynth.com>"
]
edition = "2018"
homepage = "https://getsynth.com"
license = "Apache-2.0"

[[bench]]
name = "bench"
harness = false

[features]
default = []
telemetry = ["posthog-rs", "uuid", "backtrace", "console"]

[target.x86_64-pc-windows-msvc]
rustflags = ["-C", "target-feature=+crt-static"]

[target.i686-pc-windows-msvc]
rustflags = ["-C", "target-feature=+crt-static"]

[build-dependencies]
git2 = "0.13.20"

[dev-dependencies]
lazy_static = "1.4.0"
tempfile = "3.1.0"
iai = "0.1"

[dependencies]
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"

# Telemetry related dependencies
uuid = { version = "0.8.2", features = ["v4"], optional = true }
posthog-rs = { version = "0.2.2", optional = true }
backtrace = { version = "0.3", optional = true }
console = { version = "0.14.1", default-features = false, optional = true }

colored = "2.0.0"
anyhow = "1.0.32"

structopt = "0.3.18"

log = "0.4.11"
env_logger = "0.7.1"

num_cpus = "1.0"
sysinfo = "0.15.2"
strsim = "0.10.0"

async-std = { version = "1.6.4", features = [ "attributes", "unstable" ] }
async-trait = "0.1.50"
futures = "0.3.15"

fs2 = "0.4.3"

chrono = "0.4.18"
regex = "1.3.9"
rand = "0.8.3"
ctrlc = { version = "3.0", features = ["termination"] }

synth-core = { path = "../core" }
synth-gen = { path = "../gen" }

rust_decimal = "1.10.3"
indicatif = "0.15.0"

dirs = "3.0.2"
mongodb = {version = "2.0.0-beta.3", features = ["sync", "bson-chrono-0_4"] , default-features = false}

sqlx = { version = "0.5.7", features = [ "postgres", "mysql", "runtime-async-std-native-tls", "decimal", "chrono" ] }

beau_collector = "0.2.1"

reqwest = { version = "0.11", features = ["json", "blocking"] }

semver = "1.0.4"
